# microcommerce-platform

./: .gitattributes  .gitignore  README.md  docker-compose.dev.yaml
.github/workflows/: orders_ci.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.jsx
frontend/src/components/: cart.css  cart.jsx  checkout.css  checkout.jsx  login.css  login.jsx  orders.css  orders.jsx  (+2 more)
services/: docker-compose.dev.yaml  docker-compose.yaml
services/auth_service/: Dockerfile  config.ini  entrypoint.sh  pyproject.toml
services/auth_service/api/: views.py
services/auth_service/api/management/commands/: seed_users.py  wait_for_db.py
services/auth_service/auth_service/: settings.py  urls.py
services/emails/: config.ini  pyproject.toml
services/emails/api/management/commands/: start_consumer.py
services/emails/common/utils/: clients.py
services/emails/emails/: settings.py  urls.py
services/emails/microservices/: consumer.py
services/orders/: Dockerfile  config.ini  entrypoint.sh  manage.py  pyproject.toml
services/orders/api/: authentication.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
services/orders/api/migrations/: 0001_initial.py  0002_cart_alter_order_status_cartitem.py  0003_alter_cartitem_quantity_payment.py  0004_alter_cartitem_quantity.py  0005_alter_cart_user_id.py  0006_remove_payment_amount.py  0007_alter_order_status_alter_payment_status.py
services/orders/api/views/: stripe_webhook_view.py  views.py
services/orders/microservices/: producer.py
services/orders/orders/: settings.py  urls.py
services/products/: config.ini  entrypoint.sh  pyproject.toml  requirements.txt
(+8 files in other folders)
