[project]
name = "emails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configparser>=7.2.0",
    "django==3.1.3",
    "django-cors-headers>=3.11.0",
    "djangorestframework==3.12.2",
    "gunicorn>=25.3.0",
    "psycopg2==2.9.11",
    "pika>=1.3.2",
    "requests>=2.33.1",
    "django-environ>=0.13.0",
]
