[project]
name = "orders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configparser>=7.2.0",
    "django>=4.2,<5.0",
    "django-cors-headers>=4.0.0",
    "djangorestframework>=3.14",
    "gunicorn>=25.3.0",
    "pika>=1.3.2",
    "requests>=2.33.1",
    "django-environ>=0.13.0",
    "debugpy>=1.8.20",
    "djangorestframework-simplejwt>=5.4.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "psycopg2-binary>=2.9.11",
]
production = [
    "psycopg2==2.9.11"
]